--- a/lb/nginx/conf.d/lb.conf
+++ b/lb/nginx/conf.d/lb.conf
@@ -4,10 +4,7 @@ server {
 
     resolver 127.0.0.11;
 
-    # rewrite_by_lua_block {
-    #     -- lua code.
-    #     ngx.say("hello")
-    # }
+    rewrite_by_lua_file /usr/local/openresty/dlb/lb_upstream.lua;
 
     location / {
         proxy_pass http://backends;
