--- a/lb/nginx/nginx.conf
+++ b/lb/nginx/nginx.conf
@@ -58,7 +58,9 @@ http {
 
     #gzip  on;
 
-    lua_package_path '/usr/local/openresty/?.lua;/blah/?.lua;;';
+    lua_package_path '/usr/local/openresty/resty_modules/lualib/?.lua;/usr/local/openresty/?.lua;/usr/local/openresty/luarocks/share/lua/5.1/?.lua;;';
+    lua_package_cpath '/usr/local/openresty/luarocks/lib/lua/5.1/?.so;;';
+    lua_code_cache on;
 
     include /etc/nginx/conf.d/*.conf;
 }
