feat(lb): weighted round-robin

--- a/backend1/nginx/conf.d/backend1.conf
+++ b/backend1/nginx/conf.d/backend1.conf
@@ -4,6 +4,6 @@ server {
 
     location / {
         default_type text/plain;
-        return 200 'response from backend 1';
+        return 200 'response from backend 1\n';
     }
 }
