--- a/backend2/nginx/conf.d/backend2.conf
+++ b/backend2/nginx/conf.d/backend2.conf
@@ -4,6 +4,6 @@ server {
 
     location / {
         default_type text/plain;
-        return 200 'response from backend 2';
+        return 200 'response from backend 2\n';
     }
 }
